--- a/.github/workflows/build
+++ b/.github/workflows/build
@@ -26,11 +26,13 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Install Dependecies
+        run: npm install
+
+      - name: Build
+      run: |
+        npm run build
+        npm run deploy
